# cronpar

./: Makefile  README.md  pyproject.toml
.github/workflows/: pr-check.yaml  publish-package.yaml
cronpar/: api.py
tests/: test_api.py  test_cli.py
