[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cronpar"
version = "0.1.0"
description = "A Cron Expression Parser"
authors = ["Liusha He"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"
pipx = "^1.2.0"
black = "^23.9.0"
isort = "^5.12.0"
flakehell = "^0.9.0"
flake8 = "^3.9.2"
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
cronpar = "cronpar.cli:main"

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
skip_glob = ["tests/**"]

[tool.flakehell.plugins]
pyflakes = ["+*"]
pylint = ["+*"]
mccabe = ["+*"]
pycodestyle = ["+*", "-W503", "-E203", "-W391", "-W605"]

[tool.flakehell.exceptions."**/__init__.py"]
pyflakes = ["-F401"]

